--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h2><a href="#">My Name is Idemudia Clinton</a></h2>
 									<p>I'm a passionate developer but more importantly, i'm passionate about technology.</p>
 								</header>
-								<a href="#" class="image main"><img src="IMG_1286.JPG" alt="" /></a>
+								<a href="#" class="image main"><img src="20E8581C-F1E9-4F9A-94F5-C48984471F02.jpeg alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://tittaagency.com" target="_blank" class="button large">Check it out</a></li>
 								</ul>
