--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h2><a href="#">My Name is Idemudia Clinton</a></h2>
 									<p>I'm a passionate developer but more importantly, i'm passionate about technology.</p>
 								</header>
-								<a href="#" class="image main"><img src="20E8581C-F1E9-4F9A-94F5-C48984471F02.jpeg alt="" /></a>
+								<a href="#" class="image main"><img src="20E8581C-F1E9-4F9A-94F5-C48984471F02.jpeg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://tittaagency.com" target="_blank" class="button large">Check it out</a></li>
 								</ul>
@@ -102,16 +102,16 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>20 African Church Street<br />
+								Ifako-Ijaiye, Lagos.</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">+234 903 967 9183</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">idclinton00@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
