--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</header>
 								<a href="#" class="image main"><img src="20E8581C-F1E9-4F9A-94F5-C48984471F02.jpeg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://tittaagency.com" target="_blank" class="button large">Check it out</a></li>
+									<li><a href="https://wa.me/message/4W3GWXSW7DKYJ1" target="_blank" class="button large">Hit me up on Whatsapp</a></li>
 								</ul>
 							</article>
 
