--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									<a href="#" class="image fit"><img src="portfolio2.jpg" alt="" /></a>
 									<p>A real estate agency website under construction.</p>
 									<ul class="actions special">
-										<li><a href="https:/www.lodgeeasy.ng" target="_blank" class="button">Click Here</a></li>
+										<li><a href="https://www.lodgeeasy.ng" target="_blank" class="button">Click Here</a></li>
 									</ul>
 								</article>
 
